--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,7 +17,7 @@ html, body{
     width: 100%;
     height: 60px;
     z-index: 999;
-    background-color: rgb(236, 91, 255);;
+    background-color: rgb(0, 102, 204);
     box-shadow: 0px 0px 4px rgba(0,0,0,0.5);
     transition: all 0.6s;
 }
@@ -323,13 +323,13 @@ html, body{
 .dokter{
     border-radius: 0px 20px 20px 0px;
     margin-left: 0px;
-    background-color: rgb(236, 91, 255);;
+    background-color: rgb(0, 102, 204);
 }
 
 .pasien{
     border-radius: 20px 0px 0px 20px;
     margin-right: 0px;
-    background-color: rgb(236, 91, 255);;
+    background-color: rgb(0, 102, 204);
 }
 
 @media only screen and (max-width: 500px){
