--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ body {
     position: fixed;
     height: 60px;
     width: 100%;
-    background-color:rgb(236, 91, 255);;
+    background-color:rgb(0, 102, 204);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
     transition: all 0.4s;
     transition-timing-function: ease-in-out;
@@ -43,9 +43,9 @@ body {
     top: 10px;
     right: 16px;
     padding: 9px 10px;
-    color: rgb(236, 91, 255);;
+    color: rgb(0, 102, 204);
     background-color: transparent;
-    border: 1.8px solid rgb(236, 91, 255);;
+    border: 1.8px solid rgb(0, 102, 204);
     border-radius: 8px;
 }
 
@@ -63,7 +63,7 @@ div.nav-btn:hover {
  */
 
 .sidebar {
-    background-color: rgb(236, 91, 255);
+    background-color: rgb(0, 102, 204);
     height: 100%;
     width: 20%;
     position: fixed;
@@ -242,8 +242,8 @@ button, input[type=submit]{
     text-decoration: none;
     display: inline-block;
     color: #ffffff;
-    background-color: rgb(236, 91, 255);;
-    border: 1px solid rgb(236, 91, 255);;
+    background-color: rgb(0, 102, 204);
+    border: 1px solid rgb(0, 102, 204);
     border-radius: 7px;
     -moz-border-radius: 7px;
     -webkit-border-radius: 7px;
@@ -269,7 +269,7 @@ button:hover {
 }
 
 .dropdown-ctn > ul > li:hover {
-    background-color: rgb(222, 64, 243);;
+    background-color: #0080ff;
     border-radius: 0px 0px 3px 3px;
 }
 
@@ -300,7 +300,7 @@ button:hover {
     z-index: 1;
     margin: 0px 6px;
     border-radius: 0px 0px 3px 3px;
-    background-color: rgb(236, 91, 255);;
+    background-color: rgb(0, 102, 204);
 }
 
 /*
@@ -311,7 +311,7 @@ button:hover {
     border-collapse: collapse;
     width: 60%;
     overflow: hidden;
-    border: 2px solid rgb(236, 91, 255);
+    border: 2px solid rgb(0, 102, 204);
     border-radius: 10px;
     font-size: 12pt;
 }
@@ -331,7 +331,7 @@ button:hover {
 }
 
 .input-group input[type=submit]{
-    background-color: rgb(236, 91, 255);
+    background-color: rgb(0, 102, 204);
     color: #fff;
     padding: 10px;
     font-weight: bold;
@@ -358,7 +358,7 @@ button:hover {
 
 .fbox-item{
     border-radius: 14px;
-    background-color: rgb(236, 91, 255);
+    background-color: rgb(0, 102, 204);
     color: white;
     width: 200px;
     height: 400px;
@@ -382,7 +382,7 @@ button:hover {
 }
 
 .data-form label{
-    color: rgb(236, 91, 255);
+    color: rgb(0, 102, 204);
 }
 
 .data-form input[type=text],
